force-app/main/default/objects/Recognition__c/Recognition__c.object-meta.xml
<CustomObject>
    <label>Recognition</label>
    <nameField>
        <label>Recognition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recognitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>