force-app/main/default/objects/Recognition__c/fields/Employee_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Employee_Total_Points__c</fullName>
    <description>Holds Employee’s Total Points for email template merge</description>
    <label>Employee Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>