force-app/main/default/objects/Recognition__c/fields/Recognized_By__c.field-meta.xml
<CustomField>
    <fullName>Recognized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recognized By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recognitions</relationshipName>
    <type>Lookup</type>
</CustomField>