force-app/main/default/objects/Recognition__c/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Reward Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>